Onboarding: fix whitespace issue on mobile (fix #923)

--- a/client/css/sections/shared/new-bank-form.css
+++ b/client/css/sections/shared/new-bank-form.css
@@ -56,6 +56,7 @@
     .new-bank-form > .buttons-toolbar > a,
     .new-bank-form > .buttons-toolbar > input[type='submit'] {
         width: 100%;
+        margin-left: 0;
         margin-right: 0;
         margin-bottom: 0.5em;
     }
